--- a/public/chart.html
+++ b/public/chart.html
@@ -3,6 +3,9 @@
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
+      var day = 1;
+      var page = 1;
+
       var formatDate = function (date, format) {
         if (!format) format = 'YYYY-MM-DD hh:mm:ss.SSS';
         format = format.replace(/YYYY/g, date.getFullYear());
@@ -19,12 +22,25 @@
         return format;
       };
 
-      function drawChart(day) {
-        if(!day) {
-          day = 1;
+      function prevPage() {
+        page++;
+        drawChart(day);
+      }
+
+      function nextPage() {
+        if(page > 1) {
+          page--;
+          drawChart(day);
         }
+      }
+
+      function drawChart(d) {
+        if(!d) {
+          d = 1;
+        }
+        day = d;
         $.ajax({
-          url: 'http://' + window.location.hostname + ':3000/temp?day=' + day,
+          url: 'http://' + window.location.hostname + ':3000/temp?day=' + day + '&page=' + page,
           dataType: 'jsonp',
           jsonpCallback: 'temp',
           success: function(json){
@@ -64,9 +80,11 @@
   </head>
   <body>
     <div>
+      <button type="button" onclick="javascript:prevPage(); return false;"> << </button>
       <button type="button" onclick="javascript:drawChart(1); return false;">1day</button>
       <button type="button" onclick="javascript:drawChart(3); return false;">3days</button>
       <button type="button" onclick="javascript:drawChart(7); return false;">7days</button>
+      <button type="button" onclick="javascript:nextPage(); return false;"> >> </button>
     </div>
     <div id="temp_chart" style="width: 1200px; height: 600px"></div>
   </body>
