--- a/public/chart.html
+++ b/public/chart.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
       var day = 1;
